<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">College Prep Tools</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="A">0</string>
    <string name="AMinus">0</string>
    <string name="Bplus">0</string>
    <string name="b">0</string>
    <string name="Bminus">0</string>
    <string name="Cplus">0</string>
    <string name="C">0</string>
    <string name="Cminus">0</string>
    <string name="Dplus">0</string>
    <string name="D">0</string>
    <string name="Dminus">0</string>
    <string name="F">0</string>
    <string name="submit">Submit to see GPA</string>
    <string name="CalculatedGPA">Calculated GPA</string>
    <string name="title_activity_community__service_extracurricular_activities">Community Service &amp; Extracurricular Activities</string>
    <string name="Label1">Event Name:</string>
    <string name="Activity_choice">Choose type of activity</string>
    <string name="datesinvolved">Dates involved</string>
    <string name="description1">Enter Description Below</string>
    <string name="hourscompleted">Hours Completed</string>
    <string name="saveevent">Save Event</string>

    <string-array name="activtiesarray">
        <item> Community Service </item>
        <item>Extracurricular Activity</item>
    </string-array>
    <string-array name="testarray">
        <item>SAT</item>
        <item>ACT</item>
    </string-array>

    <string name="title_activity_viewevents">View Events Created</string>
    <string name="title_activity_standard_test">Personal ACT + SAT Score Entries</string>
    <string name="newpage2">New Button</string>
    <string name="viewevents">New Button</string>
    <string name="viewnotes">New Text</string>
    <string name="nextbutton">New Button</string>
    <string name="entera">Small Text</string>
    <string name="numberofa">Number of A\'s</string>
    <string name="numberofaminus">Medium Text</string>
    <string name="aminusnumber">Number of A-\'s</string>
    <string name="numberofbplus">Number of B+\'s</string>
    <string name="numberofb">Number of B\'s</string>
    <string name="numberofbminus">Number of b-\'s</string>
    <string name="bminus">Number of B-\'s</string>
    <string name="numberofcplus"># of C+\'s</string>
    <string name="numberofc"># of C\'s</string>
    <string name="numberofcminus"># of C-\'s</string>
    <string name="numberdplus"># of D+\'s</string>
    <string name="numberofcminus2"># of D+\'s</string>
    <string name="numberofd"># of D\'s</string>
    <string name="numberofdminus"># of D-\'s</string>
    <string name="numberoff"># of F\'s</string>
    <string name="numberofa2">Number of A\'s</string>
    <string name="activitiespage">Activities</string>
    <string name="gotoactivityview">Activity View</string>
    <string name="showevents2">Show Events</string>
    <string name="list1">List Appears Here</string>
    <string name="calculategpa2">GPA</string>
    <string name="numberofaminus2"># of A-\'s</string>
    <string name="numberofbplus2"># of B+\'s</string>
    <string name="numberofb2"># of B\'s</string>
    <string name="numberofbminus2"># of B-\'s</string>
    <string name="numberofaminus3"># of A\'s</string>
    <string name="title"><![CDATA[SAT & ACT Score Tracker]]></string>
    <string name="location">Location:</string>
    <string name="showdate">Dates:</string>
    <string name="criticalreading">Critical English:</string>
    <string name="editcreading">SAT or ACT </string>
    <string name="math">Math</string>
    <string name="editmath">ACT or SAT</string>
    <string name="math1">Math:</string>
    <string name="writing">Writing:</string>
    <string name="editwriting">ACT or SAT</string>
    <string name="science">Science:</string>
    <string name="science1">ACT Score</string>
    <string name="editscience">ACT Score</string>
    <string name="reading1">Reading:</string>
    <string name="reading2">ACT Score</string>
    <string name="savescores">Save Scores</string>
    <string name="title_activity_seetest">View Past SAT &amp; ACT Scores</string>
    <string name="seetests">Scores appear here</string>
    <string name="seetests2">See Test Scores</string>
    <string name="gotest"><![CDATA[SAT & ACT]]></string>
    <string name="reading3">ACT Score</string>
    <string name="scores">See Scores</string>
    <string name="title_activity_collegeinfo">College Information</string>
    <string name="collegetitle"><![CDATA[U.S Colleges & Universities]]></string>
    <string name="collegeall">State by State List of colleges and universities</string>
    <string name="collegeinfo">College Info</string>
    <string name="title_activity_mainmenu">Welcome to College Prep Tools</string>
    <string name="gpapage">gpapage</string>
    <string name="communitypage2">communitypage</string>
    <string name="seecommevent">seecommevent</string>
    <string name="addscores">addscores</string>
    <string name="seescores">seescores</string>
    <string name="colleges">colleges</string>
    <string name="goback2">goback2</string>
    <string name="goback1">goback1</string>
    <string name="goback3">goback3</string>
    <string name="goback4">goback4</string>
    <string name="goback5">goback5</string>
    <string name="goback6">goback6</string>
    <string name="addsat_act"><![CDATA[Add SAT & ACT Scores]]></string>
    <string name="viewtestscores">View Test Scores</string>
    <string name="listofcolleges">List of Colleges by State</string>
    <string name="gpacalculator">GPA Calculator</string>
    <string name="viewevententries">View Event Entries</string>
    <string name="applicationmenu">Application Menu</string>
    <string name="version">Version 1.0.00</string>
    <string name="apptitle">Preparing for Success</string>
    <string name="searchbutton">Search</string>
    <string name="searchbutton1">Find</string>
    <string name="searchbox2">Search</string>
    <string name="nextword">Next</string>
    <string name="communityservice"><![CDATA[Add Community & Extracurricular Activities]]></string>


</resources>
