<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jose.collegepreptools.mainmenu"
    android:id="@+id/gpapage"
    android:background="@android:color/holo_blue_light">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gpapage1"
        android:layout_marginTop="147dp"
        android:src="@drawable/ic_gpa"
        android:contentDescription="@string/gpapage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/communitypage1"
        android:src="@drawable/ic_community"
        android:contentDescription="@string/communitypage2"
        android:layout_alignTop="@+id/gpapage1"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seecommevent"
        android:src="@drawable/ic_seecommunity"
        android:soundEffectsEnabled="false"
        android:contentDescription="@string/seecommevent"
        android:layout_alignTop="@+id/communitypage1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addscores"
        android:layout_below="@+id/gpapage1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp"
        android:src="@drawable/ic_addscores"
        android:contentDescription="@string/addscores" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seescores"
        android:layout_alignTop="@+id/addscores"
        android:layout_alignLeft="@+id/communitypage1"
        android:layout_alignStart="@+id/communitypage1"
        android:src="@drawable/ic_seescores"
        android:contentDescription="@string/seescores" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/college"
        android:layout_alignTop="@+id/seescores"
        android:layout_alignLeft="@+id/seecommevent"
        android:layout_alignStart="@+id/seecommevent"
        android:src="@drawable/ic_college"
        android:contentDescription="@string/colleges" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/addsat_act"
        android:id="@+id/textView"
        android:layout_below="@+id/addscores"
        android:layout_alignRight="@+id/addscores"
        android:layout_alignEnd="@+id/addscores" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/viewtestscores"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView"
        android:layout_alignRight="@+id/seescores"
        android:layout_alignEnd="@+id/seescores" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/listofcolleges"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignLeft="@+id/college"
        android:layout_alignStart="@+id/college" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/gpacalculator"
        android:id="@+id/textView5"
        android:layout_below="@+id/gpapage1"
        android:layout_alignRight="@+id/gpapage1"
        android:layout_alignEnd="@+id/gpapage1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/viewevententries"
        android:id="@+id/textView7"
        android:layout_below="@+id/seecommevent"
        android:layout_alignLeft="@+id/seecommevent"
        android:layout_alignStart="@+id/seecommevent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/applicationmenu"
        android:id="@+id/textView8"
        android:textSize="35sp"
        android:layout_above="@+id/communitypage1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/version"
        android:id="@+id/textView9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/apptitle"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/seecommevent"
        android:textSize="35sp"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/communityservice"
        android:id="@+id/comm1"
        android:layout_below="@+id/communitypage1"
        android:layout_above="@+id/seescores"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/communitypage1"
        android:layout_alignEnd="@+id/communitypage1" />
</RelativeLayout>
