<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jose.collegepreptools.collegeinfo"
    android:background="@android:color/holo_blue_light"
    android:id="@+id/searchbox">

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/collegeall"
        android:text="@string/collegeall"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/collegetittle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/collegetitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/collegetittle" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goback6"
        android:src="@drawable/ic_goback"
        android:contentDescription="@string/goback6"
        android:layout_below="@+id/collegetittle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchbox1"
        android:inputType="text"
        android:singleLine="false"
        android:hint="@string/searchbox2"
        android:layout_alignBottom="@+id/goback6"
        android:layout_toLeftOf="@+id/goback6"
        android:layout_toEndOf="@+id/nextword"
        android:layout_toRightOf="@+id/nextword" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchbutton1"
        android:id="@+id/searchbutton"
        android:onClick="find"
        android:layout_alignBottom="@+id/searchbox1"
        android:layout_toLeftOf="@+id/collegetittle"
        android:layout_toStartOf="@+id/collegetittle" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextword"
        android:id="@+id/nextword"
        android:onClick="nextword"
        android:layout_alignBottom="@+id/searchbox1"
        android:layout_toRightOf="@+id/searchbutton"
        android:layout_toEndOf="@+id/searchbutton" />

</RelativeLayout>
